# rig

./: .gitignore  Cargo.toml  README.md  rig.example.toml  rustfmt.toml
bench/: compare.py
crates/rig-cli/: Cargo.toml
crates/rig-cli/src/: client.rs  config.rs  main.rs  output.rs  runtime.rs
crates/rig-cli/src/commands/: benchmark.rs  config.rs  coordinator.rs  demo.rs  generate.rs  inference.rs  mod.rs  pipeline.rs  status.rs  worker.rs
crates/rig-coordinator/: Cargo.toml
crates/rig-coordinator/src/: config.rs  generation.rs  handler.rs  inference.rs  lib.rs  monitor.rs  request.rs  server.rs  state.rs
crates/rig-coordinator/tests/: integration.rs
crates/rig-core/: Cargo.toml
crates/rig-core/src/: error.rs  lib.rs  sampling.rs  stopping.rs
crates/rig-core/src/config/: coordinator.rs  generation.rs  logging.rs  mod.rs  runtime.rs  transport.rs  worker.rs
crates/rig-core/src/traits/: cache.rs  coordination.rs  message.rs  mod.rs  runtime.rs  tokenizer.rs  transport.rs
crates/rig-core/src/types/: id.rs  mod.rs  node.rs  partition.rs  partitioning.rs  pipeline.rs  protocol.rs  request.rs  sampling.rs  stop.rs  tensor.rs
crates/rig-inference/: Cargo.toml
crates/rig-inference/src/: lib.rs  local_generator.rs  sampler.rs  stop_checker.rs  stop_reason.rs
crates/rig-message-bincode/: Cargo.toml
crates/rig-message-bincode/src/: channel.rs  lib.rs
crates/rig-runtime-candle/: Cargo.toml
crates/rig-runtime-candle/src/: attention.rs  block.rs  cache.rs  config.rs  error.rs  gguf_config.rs  kv_cache.rs  lib.rs  memory.rs  mlp.rs  partition.rs  runtime.rs  tokenizer.rs  utils.rs
crates/rig-runtime-candle/src/layers/: attention.rs  block.rs  mlp.rs  mod.rs
crates/rig-runtime-candle/src/model/: llama.rs  mistral.rs  mod.rs  qwen.rs
crates/rig-runtime-candle/src/partition/: mod.rs
crates/rig-runtime-candle/src/weights/: gguf.rs  linear.rs  mod.rs  quantized.rs  safetensor.rs
crates/rig-runtime-candle/tests/: integration.rs
crates/rig-transport-tcp/: Cargo.toml
crates/rig-transport-tcp/src/: config.rs  factory.rs  lib.rs  listener.rs  transport.rs
crates/rig-transport-tcp/tests/: integration.rs
crates/rig-worker/: Cargo.toml
crates/rig-worker/src/: config.rs  coordinator_client.rs  error.rs  lib.rs  main.rs  node.rs  peer_connection.rs  stage.rs
crates/rig-worker/tests/: integration.rs
scripts/local-cluster/: cluster.sh  config.sh
scripts/wifi-cluster/: cluster.sh  config.sh
