[workspace]
resolver = "2"
members = [
    "crates/rig-core",
    "crates/rig-runtime-candle",
    "crates/rig-transport-tcp",
    "crates/rig-message-bincode",
    "crates/rig-coordinator",
    "crates/rig-worker",
    "crates/rig-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/buyukakyuz/rig"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
rand = "0.8"
minijinja = "2"

rig-core = { path = "crates/rig-core" }
rig-runtime-candle = { path = "crates/rig-runtime-candle" }
rig-transport-tcp = { path = "crates/rig-transport-tcp" }
rig-message-bincode = { path = "crates/rig-message-bincode" }
rig-coordinator = { path = "crates/rig-coordinator" }
rig-worker = { path = "crates/rig-worker" }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unwrap_in_result = "deny"

doc_markdown = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
