[package]
name = "rig-cli"
description = "CLI tools for Rig distributed inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "rig"
path = "src/main.rs"

[dependencies]
rig-core.workspace = true
rig-coordinator.workspace = true
rig-worker.workspace = true
rig-transport-tcp = { path = "../rig-transport-tcp" }
rig-message-bincode = { path = "../rig-message-bincode" }
rig-runtime-candle = { path = "../rig-runtime-candle", optional = true }

tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
rand.workspace = true

clap = { version = "4", features = ["derive", "env"] }

toml = "0.8"
directories = "5"
serde_json = "1"
num_cpus = "1"

[features]
default = ["runtime-candle"]
runtime-candle = ["dep:rig-runtime-candle"]
metal = ["runtime-candle", "rig-runtime-candle/metal"]
cuda = ["runtime-candle", "rig-runtime-candle/cuda"]

[lints]
workspace = true