[package]
name = "rig-core"
description = "Core traits and types for the Rig distributed inference framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
bytes.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
