[package]
name = "rig-runtime-candle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rig-core = { path = "../rig-core" }

candle-core = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-nn = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-transformers = { git = "https://github.com/huggingface/candle", branch = "main" }

tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
half = "2.4"
bytemuck = { version = "1.18", features = ["derive"] }
tokenizers = { git = "https://github.com/huggingface/tokenizers", branch = "main" }
minijinja = { workspace = true }
ouroboros = "0.18"
rand = { workspace = true }

sysinfo = "0.32"
cudarc = { version = "0.12", optional = true }
metal = { version = "0.27", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rig-worker = { path = "../rig-worker" }
half = "2.4"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "dep:cudarc"]
metal = ["candle-core/metal", "candle-nn/metal", "dep:metal"]

[lints]
workspace = true
